@@ -1,3 +1,9 @@
+2003-12-16  Dmitriy Anisimkov  <anisimkov@yahoo.com>
+
+	* ssl-thin.ads:
+	(SSL_use_certificate_file): New routine binded.
+	(SSL_use_PrivateKey_file): New routine binded.
+
 2003-10-02  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
